--- a/Homework/1/style.css
+++ b/Homework/1/style.css
@@ -3,12 +3,39 @@
     margin: 0;
 }
 
+/* header start */
+
+header {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    padding: 20px;
+    border-bottom: 6px solid #EA4E22;
+    color: #ffffff;
+}
+
+
 .header_nav a {
     text-decoration: none;
-    color: black;
+    font-size: 25px;
+    color: #EA4E22;
+    font-weight: bold;
+    margin: 10px;
 }
 
 .header_nav a:hover {
-    text-decoration: none;
-    color: black;
+    color: #ff0000;
 }
+
+.header_nav a.active {
+    color: #ff0000;
+}
+
+.header_logo {
+    color: #ff0000;
+    height: 70px;
+}
+
+/* header end */
