feat: finish layout and content for index.html - Home page

--- a/Homework/1/style.css
+++ b/Homework/1/style.css
@@ -3,6 +3,71 @@
     margin: 0;
 }
 
+@font-face {
+    font-family: 'Roboto';
+    src: url('./assets/fonts/Roboto/static/Roboto-Thin.ttf') format('truetype');
+    font-weight: 100;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('./assets/fonts/Roboto/static/Roboto-Light.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('./assets/fonts/Roboto/static/Roboto-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('./assets/fonts/Roboto/static/Roboto-Medium.ttf') format('truetype');
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('./assets/fonts/Roboto/static/Roboto-Bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('./assets/fonts/Roboto/static/Roboto-Black.ttf') format('truetype');
+    font-weight: 900;
+    font-style: normal;
+}
+
+
+html, body {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    font-family: 'Roboto', sans-serif;
+}
+
+body {
+    color: #1d262d;
+    
+}
+
+p {
+    margin: 5px;
+}
+
+h1, h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    color: #1d262d;
+}
+
 /* header start */
 
 header {
@@ -14,6 +79,7 @@ header {
     padding: 20px;
     border-bottom: 6px solid #EA4E22;
     color: #ffffff;
+    margin-bottom: 50px;
 }
 
 
@@ -39,3 +105,95 @@ header {
 }
 
 /* header end */
+
+/* main start */
+
+main {
+    display: flex;
+    justify-content: space-between;
+    flex: 1;
+}
+
+main a {
+    text-decoration: none;
+    color: #EA4E22;
+}
+
+main a:hover {
+    text-decoration: none;
+    color: #ff0000;
+}
+/* 
+main div {
+    margin: 20px 0;
+} */
+
+aside {
+    padding: 20px;
+    margin-left: 3%;
+    border: #EA4E22 solid 1px;
+    /* text-align: center; */
+    width: 20%;
+    border-radius: 10px;
+    box-shadow: 0 0 10px #1d262d;
+}
+
+aside a {
+    text-decoration: none;
+    color: #1d262d;
+}
+
+aside a:hover {
+    color: #EA4E22;
+}
+
+.main_about {
+    border: #EA4E22 solid 1px;
+    width: 70%;
+    margin-right: 3%;
+    padding: 20px;
+    border-radius: 10px;
+    color: #1d262d;
+    box-shadow: 0 0 10px #1d262d;
+}
+
+/* main end */
+
+/* footer start */
+
+footer {
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    justify-content: space-between;
+    width: 100%;
+    background: #231f20 linear-gradient(180deg, #232323 0%, #231f20 50%, #303032 100%);
+    border-top: 6px solid #EA4E22;
+    color: #a1a1a1;
+    margin-top: 50px;
+}
+
+footer h3 {
+    color: #a1a1a1; 
+}
+
+footer section {
+    width: 25%;
+}
+
+.footer_about {
+    text-align: center;
+}
+
+.footer_nav a {
+    text-decoration: none;
+    font-size: 12px;
+    color: #a1a1a1;
+    font-weight: bold;
+    margin: 10px;
+}
+
+.footer_nav a:hover {
+    color: #fff;
+}
+/* footer  */
