--- a/Homework/1/style.css
+++ b/Homework/1/style.css
@@ -147,7 +147,7 @@ aside a:hover {
     color: #EA4E22;
 }
 
-.main_about {
+.main_home, .main_about {
     border: #EA4E22 solid 1px;
     width: 70%;
     margin-right: 3%;
@@ -155,6 +155,10 @@ aside a:hover {
     border-radius: 10px;
     color: #1d262d;
     box-shadow: 0 0 10px #1d262d;
+}
+
+.main_home div, .main_about div {
+    margin-bottom: 25px;
 }
 
 /* main end */
